--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    FootVerse Dev Server - Alpha Build
+    FootyVerse Dev Server - Alpha Build
   </h1>
   Football Management Sim - Open Source Development
 </div>
