--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,6 @@
   </li>
 </ul>
 <div>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-1686891852898803",
-      enable_page_level_ads: true
-    });
-  </script>
+  <ng-adsense></ng-adsense>
 </div>
 
