fixed bootstrap integration.. added font-awesome icon intgration.. updated login page.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,26 @@
-Login
+<div> <!-- Header Row -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 align-middle">
+        <h1>Footyverse</h1>
+        <p>Football Management RPG</p>
+      </div>
+      <div class="col-md-6">
+        <div class = "row">
+          <div class="col-md-6">
+            <div class="input-group">
+              <input type="email" placeholder="email" class="form-control">
+              <input type="password" placeholder="password" class="form-control">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">Login</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+           <i class="fab fa-facebook-square big-icon"></i> / <i class="fab fa-google-plus-square big-icon"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
