--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,25 +10,22 @@
     <div class="omb_login">
       <h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
       <div class="row omb_row-sm-offset-3 omb_socialButtons">
-        <div class="col-xs-4 col-sm-2">
-          <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
-            <i class="fa fa-facebook visible-xs"></i>
-            <span class="hidden-xs">Facebook</span>
-          </a>
+        <div class="col-xs-4 col-sm-2 col-md-12">
+          <button type="button" class="btn btn-lg btn-block omb_btn-facebook"(click)="tryGoogleLogin()"><i class="fa fa-facebook visible-xs"></i><span class="hidden-xs">Facebook</span></button>
         </div>
-        <div class="col-xs-4 col-sm-2">
-          <button type="button" class="btn btn-lg btn-block omb_btn-google"(click)="tryGoogleLogin()">Login with Google</button>
+        <div class="col-xs-4 col-sm-2 col-md-12">
+          <button type="button" class="btn btn-lg btn-block omb_btn-google"(click)="tryGoogleLogin()"><span class="hidden-xs">Google</span></button>
         </div>
       </div>
       <div class="row omb_row-sm-offset-3 omb_loginOr">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6 col-md-12">
           <hr class="omb_hrOr">
           <span class="omb_spanOr">or</span>
         </div>
       </div>
 
       <div class="row omb_row-sm-offset-3">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6 col-md-12">
           <form class="omb_loginForm" action="" autocomplete="off" method="POST">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -47,12 +44,12 @@
         </div>
       </div>
       <div class="row omb_row-sm-offset-3">
-        <div class="col-xs-12 col-sm-3">
+        <div class="col-xs-12 col-sm-3 col-md-12">
           <label class="checkbox">
             <input type="checkbox" value="remember-me">Remember Me
           </label>
         </div>
-        <div class="col-xs-12 col-sm-3">
+        <div class="col-xs-12 col-sm-3 col-md-12">
           <p class="omb_forgotPwd">
             <a href="#">Forgot password?</a>
           </p>
