Added Facebook Login support

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
       <h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
       <div class="row omb_row-sm-offset-3 omb_socialButtons">
         <div class="col-xs-4 col-sm-2 col-md-12">
-          <button type="button" class="btn btn-lg btn-block omb_btn-facebook"(click)="tryGoogleLogin()"><i class="fa fa-facebook visible-xs"></i><span class="hidden-xs">Facebook</span></button>
+          <button type="button" class="btn btn-lg btn-block omb_btn-facebook"(click)="tryFacebookLogin()"><i class="fa fa-facebook visible-xs"></i><span class="hidden-xs">Facebook</span></button>
         </div>
         <div class="col-xs-4 col-sm-2 col-md-12">
           <button type="button" class="btn btn-lg btn-block omb_btn-google"(click)="tryGoogleLogin()"><span class="hidden-xs">Google</span></button>
