--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,20 +26,20 @@
 
       <div class="row omb_row-sm-offset-3">
         <div class="col-xs-12 col-sm-6 col-md-12">
-          <form class="omb_loginForm" action="" autocomplete="off" method="POST">
+          <form [formGroup]="loginForm" class="omb_loginForm" action="" autocomplete="off">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-user"></i></span>
-              <input type="text" class="form-control" name="username" placeholder="email address">
+              <input formControlName="emailAddress" type="text" class="form-control" name="username" placeholder="email address">
             </div>
             <span class="help-block"></span>
 
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-              <input  type="password" class="form-control" name="password" placeholder="Password">
+              <input formControlName="password" type="password" class="form-control" name="password" placeholder="Password">
             </div>
             <span class="help-block">Password error</span>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+            <button (click)="tryEmailLogin()" class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
           </form>
         </div>
       </div>
